js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-return-import-call-unknown.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
return
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
